--- a/war/EaternityRechner.html
+++ b/war/EaternityRechner.html
@@ -17,7 +17,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Eaternity CO2-Rechner</title>
+    <title>Eaternity CO₂-Rechner</title>
 
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
