--- a/war/EaternityRechner.html
+++ b/war/EaternityRechner.html
@@ -22,6 +22,14 @@
     <!-- be added before this line.                -->
     <!--                                           -->
 
+ 	<!-- before your module(*.nocache.js) loading  (GWT.BOOTSTRAP)-->
+	<!--[if lt IE 9]>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	<!--[if IE 7]>
+ 	<link rel="stylesheet" href="{your module name}/css/font-awesome-ie7.css">
+	<![endif]-->
+	<!-- your module(*.nocache.js) loading  -->
     <script type="text/javascript" language='javascript' src='eaternity/eaternity.nocache.js'></script>
   </head>
 
