--- a/war/EaternityRechner.html
+++ b/war/EaternityRechner.html
@@ -41,7 +41,8 @@
   <body>
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
-
+	<img style="position: fixed;  top: 45%;  left: 50%; margin-left:-90px;max-width: 180px;margin-top:-100px;" src="images/logo-eaternity-small_04-11-2010.png" />
+	<img style="position: fixed;  top: 45%;  left: 50%; margin-left:-15px; ,margin-top:-15px;" src="images/spinner.gif" />
     <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
     <noscript>
       <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
