--- a/war/EaternityRechner.html
+++ b/war/EaternityRechner.html
@@ -9,6 +9,14 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
+	<link rel="shortcut icon" href="images/favicon.ico">
+	<!--                 As time may come                                              -->
+	<!--                                                             
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">   -->
+    <!--                                                               -->
+
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
                                                             
@@ -42,7 +50,7 @@
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
 	<!-- TODO: make these images disappear when loaded succesfully... -->
-	<img style="position: fixed;  top: 45%;  left: 50%; margin-left:-90px;max-width: 180px;margin-top:-100px;" src="images/logo-eaternity-small_04-11-2010.png" />
+	<img style="position: fixed;  top: 45%;  left: 50%; margin-left:-90px;max-width: 180px;margin-top:-130px;" src="images/logo-eaternity-small_04-11-2010.png" />
 	<img style="position: fixed;  top: 45%;  left: 50%; margin-left:-15px; ,margin-top:-15px;" src="images/spinner.gif" />
     <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
     <noscript>
