--- a/war/images/tabs/test.html
+++ b/war/images/tabs/test.html
@@ -76,8 +76,16 @@
 		height: 12px; 
 		padding-left:5px;
 		padding-bottom:5px;
+		opacity:0.4;
+		filter:alpha(opacity=40); /* For IE8 and earlier */
 
 		}
+		
+	.TabInner .Label a:hover img{ 
+		opacity:1;
+		filter:alpha(opacity=100); /* For IE8 and earlier */
+
+			}
 
 	.Tab .TabInner .Label { 
 	  background: url(tab-inactive-center.png) repeat-x top; 
@@ -99,9 +107,9 @@
 <div class="Tabs">
 	<div class="Tab">
 		<div class="TabInner">
-			<div class="Label">
+			<a href="#"><div class="Label">
 				Meine Hobby Küche
-			</div>
+			</div></a>
 		</div>
 	</div>
 	<div class="Tab Tab-selected">
@@ -113,16 +121,16 @@
 	</div>
 	<div class="Tab">
 		<div class="TabInner">
-			<div class="Label">
+			<a href="#"><div class="Label">
 				Gemeinschafts Küche
-			</div>
+			</div></a>
 		</div>
 	</div>
 	<div class="Tab">
 		<div class="TabInner">
-			<div class="Label">
+			<a href="#"><div class="Label">
 				Populäre Rezepte 
-			</div>
+			</div></a>
 		</div>
 	</div>
 </div>
